fix(vincent-rest-api): init changes, details in PR
