# packages/vincent-rest-api/src/generated/openapi.json
@@ -51,7 +51,106 @@
           "changes"
         ]
       },
+      "ChangeOwner": {
+        "type": "object",
+        "properties": {
+          "authorWalletAddress": {
+            "type": "string",
+            "description": "New owner address",
+            "example": "0x123456789012345678901234567890123456abcd"
+          }
+        },
+        "required": [
+          "authorWalletAddress"
+        ]
+      },
       "CreateApp": {
+        "type": "object",
+        "properties": {
+          "appId": {
+            "type": "number",
+            "description": "Application ID (optional - will be generated if not provided)",
+            "example": 12345
+          },
+          "name": {
+            "type": "string",
+            "description": "The name of the application",
+            "example": "Memecoin DCA App"
+          },
+          "description": {
+            "type": "string",
+            "description": "Description of the application",
+            "example": "This is a memecoin DCA App"
+          },
+          "contactEmail": {
+            "type": "string",
+            "format": "email",
+            "description": "Contact email for the application manager",
+            "example": "contact@example.com"
+          },
+          "appUserUrl": {
+            "type": "string",
+            "format": "uri",
+            "description": "URL of the application for users",
+            "example": "https://myapplication.example.com/"
+          },
+          "logo": {
+            "type": "string",
+            "description": "Base64 encoded logo image",
+            "example": "iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAIAAAACDbGyAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAOvwAADr8BOAVTJAAAAA5JREFUGFdj/M+ACAAAAAD//wE7AnsAAAAAAElFTkSuQmCC"
+          },
+          "redirectUris": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uri"
+            },
+            "description": "Redirect URIs users can be sent to after signing up for your application (with their JWT token)",
+            "example": [
+              "https://google.com",
+              "https://litprotocol.com"
+            ]
+          },
+          "tools": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "description": "List of tool identities to include in the initial version",
+            "example": [
+              "@vincent/foo-bar@1.0.0"
+            ]
+          },
+          "deploymentStatus": {
+            "type": "string",
+            "enum": [
+              "dev",
+              "test",
+              "prod"
+            ],
+            "description": "Deployment status of the application; dev, test, or prod",
+            "example": "dev"
+          },
+          "managerAddress": {
+            "type": "string",
+            "description": "Manager wallet address",
+            "example": "0x123456789012345678901234567890123456abcd"
+          }
+        },
+        "required": [
+          "appId",
+          "name",
+          "description",
+          "contactEmail",
+          "appUserUrl",
+          "logo",
+          "redirectUris",
+          "tools",
+          "deploymentStatus",
+          "managerAddress"
+        ]
+      },
+      "EditApp": {
         "type": "object",
         "properties": {
           "name": {
@@ -102,11 +201,6 @@
             ],
             "description": "Deployment status of the application; dev, test, or prod",
             "example": "dev"
-          },
-          "managerAddress": {
-            "type": "string",
-            "description": "Manager wallet address",
-            "example": "0x123456789012345678901234567890123456abcd"
           }
         },
         "required": [
@@ -116,8 +210,7 @@
           "appUserUrl",
           "logo",
           "redirectUris",
-          "deploymentStatus",
-          "managerAddress"
+          "deploymentStatus"
         ]
       },
       "AppDef": {
@@ -138,6 +231,12 @@
             "format": "date-time",
             "description": "Timestamp when this was created"
           },
+          "appId": {
+            "type": "number",
+            "description": "Application ID",
+            "example": 12345,
+            "readOnly": true
+          },
           "name": {
             "type": "string",
             "description": "The name of the application",
@@ -177,6 +276,16 @@
               "https://litprotocol.com"
             ]
           },
+          "tools": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "description": "List of tool identities to include in the initial version",
+            "example": [
+              "@vincent/foo-bar@1.0.0"
+            ]
+          },
           "deploymentStatus": {
             "type": "string",
             "enum": [
@@ -192,12 +301,6 @@
             "description": "Manager wallet address",
             "example": "0x123456789012345678901234567890123456abcd"
           },
-          "appId": {
-            "type": "number",
-            "description": "Application ID",
-            "example": 12345,
-            "readOnly": true
-          },
           "activeVersion": {
             "type": "number",
             "description": "Active version of the application",
@@ -208,15 +311,16 @@
           "_id",
           "updatedAt",
           "createdAt",
+          "appId",
           "name",
           "description",
           "contactEmail",
           "appUserUrl",
           "logo",
           "redirectUris",
+          "tools",
           "deploymentStatus",
           "managerAddress",
-          "appId",
           "activeVersion"
         ]
       },
@@ -1177,7 +1281,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateApp"
+                "$ref": "#/components/schemas/EditApp"
               }
             }
           }
@@ -1867,17 +1971,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "authorWalletAddress": {
-                    "type": "string",
-                    "description": "New author wallet address",
-                    "example": "0x1234567890123456789012345678901234567890"
-                  }
-                },
-                "required": [
-                  "authorWalletAddress"
-                ]
+                "$ref": "#/components/schemas/ChangeOwner"
               }
             }
           }
@@ -2537,17 +2631,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "authorWalletAddress": {
-                    "type": "string",
-                    "description": "New author wallet address",
-                    "example": "0x1234567890123456789012345678901234567890"
-                  }
-                },
-                "required": [
-                  "authorWalletAddress"
-                ]
+                "$ref": "#/components/schemas/ChangeOwner"
               }
             }
           }
